# CrewAI-job

./: agents.py  main.py  pyproject.toml  tasks.py
script/: auto_search_web.py  compagny.json  data.json  json_parser.py  nice_it.html  nice_scraper.py  nice_tech.html  output_compagny.json  output_compagny2.json  output_nice.json  scraper.py  tech_scrapper.py
